nav bar spacings fixed for all possible cases

--- a/src/common/NavBar/styles.less
+++ b/src/common/NavBar/styles.less
@@ -50,6 +50,10 @@
         font-style: normal;
         font-weight: normal;
         color: var(--color-surfacelighter);
+
+        &~.spacing {
+            display: none;
+        }
     }
 
     .spacing {
@@ -57,9 +61,14 @@
     }
 
     .search-bar {
-        width: calc(var(--nav-bar-height) * 9);
+        flex-grow: 0;
+        flex-shrink: 1;
+        flex-basis: calc(var(--nav-bar-height) * 8);
         height: var(--nav-bar-height);
-        margin-right: calc(var(--nav-bar-height) * 3.5);
+
+        &+.spacing {
+            max-width: calc(var(--nav-bar-height) * 3.5);
+        }
     }
 
     .user-menu {
